--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
 
                 <li>Coco</li>
 
-                <li>Wall-E/li>
-            </ol>
+                <li>Wall-E</li>
+
+        <hl>Characters</hl>
+            <li>Mr.Incredible!</li>
+            <li>Sullivan</li>
+
+        </hl>    </ol>
 
     </body>
 </html>
